--- a/index.html
+++ b/index.html
@@ -379,7 +379,11 @@
     </footer>
     <div data-modal class="backdrop is-hidden">
       <div class="modal">
-        <button data-modal-close class="close-modal" type="button">X</button>
+        <button data-modal-close class="close-modal" type="button">
+          <svg width="11px" height="11px">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
